--- a/main.css
+++ b/main.css
@@ -26,7 +26,7 @@ body {
   padding: 20px;
 }
 
-.logo {
+.logo a {
   width: 76px;
   height: 20px;
   color: #6070ff;
@@ -34,7 +34,7 @@ body {
   line-height: 20px;
   font-weight: 700;
   font-family: 'Poppins', sans-serif;
-  font-style: normal;
+  text-decoration: none;
 }
 
 .contents {
