--- a/main.css
+++ b/main.css
@@ -18,15 +18,14 @@ body {
   height: 718px;
   border-radius: 20px;
 }
-
-.header-section {
+.nav-bar a {
   display: flex;
+  text-decoration: none;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 20px ;
 }
-
-.logo a {
+.logo {
   width: 76px;
   height: 20px;
   color: #6070ff;
@@ -34,7 +33,7 @@ body {
   line-height: 20px;
   font-weight: 700;
   font-family: 'Poppins', sans-serif;
-  text-decoration: none;
+  font-style: normal;
 }
 
 .contents {
