--- a/main.css
+++ b/main.css
@@ -249,7 +249,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 375px;
-  height: 1263px;
+  height: 1110px;
   background-color: #fff;
   align-items: center;
 }
@@ -428,44 +428,107 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 200px;
+  margin-bottom: 800px;
+  background-color: #6070FF;
+  border-top-left-radius: 100px;
+  width: 100%;
 }
 
 .form-section h4 {
-  /* color: #ffffff; */
-  font-family: poppins, sans-serif;
+  color: #ffffff;
+  font-family: "poppins", sans-serif;
   font-size: 40px;
   font-weight: 700;
-  line-height: 50px;
+  line-height: 52px;
+  margin-top: 120px;
 }
 
 .form-section p {
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 400;
   font-style: normal;
   line-height: 28px;
-  font-family: poppins, sans-serif;
+  font-family: "poppins", sans-serif;
   color: #ebebff;
-  margin: 20px 0;
+  padding-left: 24px;
+  margin-top: 20px;
 }
-
-.contact-form li {
-  list-style-type: none;
+label {
+  display: none;
 }
-
-.contact-form li input {
+.form-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+.form-container ul {
+  list-style: none;
+}
+.form-container input {
+  margin: 10px;
+  border: 1px solid #CFD8DC;
+  border-radius: 8px;
+  background: #FFFFFF;
+  width: 327px;
+  height: 48px;
+  font-size: 17px;
+  color: #172B4D;
+  font-weight: 400;
+  line-height: 20px;
+  font-style: normal;
+  font-family: "poppins", sans-serif;
   padding: 10px;
-  border-radius: 8px;
-  border: #cfb8bc 1px solid;
-  margin: 10px 0;
 }
-
-.contact-form li button {
-  border: none;
-  padding: 12px 16px;
-  background-color: #ffffff;
-  color: #6070ff;
-  border: #cfb8bc 1px solid;
-  margin: 15px 0;
+.form-container textarea {
+  border: 1px solid #CFD8DC;
   border-radius: 8px;
+  width: 327px;
+  height: 170px;
+  margin-left: 10px;
+  margin-top: 11px;
+  padding: 12px;
+  font-family: 'Poppins',sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #B3BAC5;
+}
+.form-container textarea:hover,
+.form-container input:hover {
+  border: 1px solid  #396df2;
+  border-radius: 8px;
+  text-decoration: underline;
+  text-decoration-color: #396df2;
+  text-decoration-thickness: 2px;
+}
+.form-container textarea:focus,
+.form-container input:focus {
+  border-color: #000;
+}
+.form-container button {
+  background: #FFFFFF;
+  border-radius: 8px;
+  padding: 12px 16px;
+  font-family: 'Poppins',sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  color:  #6070FF;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  margin-left: 10px;
+}
+.form-container button:hover {
+  text-decoration: underline;
+  text-decoration-color: #396df2;
+  text-decoration-thickness: 2px;
+
+}
+.form-image {
+  width: 220px;
+  position: absolute;
+  margin-left: 74px;
+  
 }
