--- a/main.css
+++ b/main.css
@@ -429,13 +429,13 @@ body {
   justify-content: center;
   align-items: center;
   margin-bottom: 800px;
-  background-color: #6070FF;
+  background-color: #6070ff;
   border-top-left-radius: 100px;
   width: 100%;
 }
 
 .form-section h4 {
-  color: #ffffff;
+  color: #fff;
   font-family: "poppins", sans-serif;
   font-size: 40px;
   font-weight: 700;
@@ -453,47 +453,53 @@ body {
   padding-left: 24px;
   margin-top: 20px;
 }
+
 label {
   display: none;
 }
+
 .form-container {
   display: flex;
   justify-content: center;
   margin-top: 30px;
 }
+
 .form-container ul {
   list-style: none;
 }
+
 .form-container input {
   margin: 10px;
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
-  background: #FFFFFF;
+  background: #fff;
   width: 327px;
   height: 48px;
   font-size: 17px;
-  color: #172B4D;
+  color: #172b4d;
   font-weight: 400;
   line-height: 20px;
   font-style: normal;
   font-family: "poppins", sans-serif;
   padding: 10px;
 }
+
 .form-container textarea {
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
   border-radius: 8px;
   width: 327px;
   height: 170px;
   margin-left: 10px;
   margin-top: 11px;
   padding: 12px;
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
-  color: #B3BAC5;
+  color: #b3bac5;
 }
+
 .form-container textarea:hover,
 .form-container input:hover {
   border: 1px solid  #396df2;
@@ -502,33 +508,35 @@ label {
   text-decoration-color: #396df2;
   text-decoration-thickness: 2px;
 }
+
 .form-container textarea:focus,
 .form-container input:focus {
   border-color: #000;
 }
+
 .form-container button {
-  background: #FFFFFF;
+  background: #fff;
   border-radius: 8px;
   padding: 12px 16px;
-  font-family: 'Poppins',sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
-  color:  #6070FF;
+  color: #6070ff;
   margin-top: 20px;
   margin-bottom: 30px;
   margin-left: 10px;
 }
+
 .form-container button:hover {
   text-decoration: underline;
   text-decoration-color: #396df2;
   text-decoration-thickness: 2px;
-
 }
+
 .form-image {
   width: 220px;
   position: absolute;
   margin-left: 74px;
-  
 }
