--- a/main.css
+++ b/main.css
@@ -7,14 +7,13 @@
   font-family: 'Poppins', sans-serif;
 }
 
-body {
+/*body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+}*/
 
 .wrapper {
-  width: 375px;
   height: 718px;
   border-radius: 20px;
 }
@@ -25,6 +24,10 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+}
+.nav-bar ul {
+  display: none;
+  list-style: none;
 }
 
 .logo {
@@ -38,13 +41,7 @@ body {
   font-style: normal;
 }
 
-.contents {
-  background-image: url(/images/header.png);
-  height: 100%;
-  width: 100%;
-  background-size: 100%;
-  background-repeat: no-repeat;
-}
+  
 
 .heading {
   width: 327px;
@@ -85,6 +82,18 @@ body {
 .main-section {
   display: flex;
   flex-direction: column;
+  background-image: url(/images/header.png);
+  height: 100%;
+  width: 100%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+
+}
+.desktop-image {
+  display: none;
+}
+.desktop {
+  display: none;
 }
 
 .nav-links {
@@ -264,7 +273,7 @@ body {
   color: #172b4d;
   width: 250px;
   height: 101px;
-  margin-right: 60px;
+  margin-left: 45px;
 }
 
 .about-paragraph {
@@ -275,7 +284,7 @@ body {
   font-style: normal;
   color: #344563;
   margin: 12px 0;
-  margin-left: 34px;
+  margin-left: 40px;
 }
 
 .about-intro {
@@ -286,7 +295,7 @@ body {
   font-weight: 500;
   margin: 0 8px;
   font-style: normal;
-  margin-right: 190px;
+  margin-left: 40px;
   height: 24px;
 }
 
@@ -294,9 +303,9 @@ body {
   display: flex;
   list-style: none;
   align-items: center;
-  gap: 30px;
+  gap: 20px;
   justify-content: space-between;
-  margin-right: 80px;
+  margin-left: 40px;
   margin-top: 15px;
 }
 
@@ -313,7 +322,7 @@ body {
   text-align: center;
   border-radius: 10px;
   background-color: #fff;
-  margin-right: 150px;
+  margin-left: 40px;
   padding: 13px;
 }
 
@@ -539,4 +548,97 @@ label {
   width: 220px;
   position: absolute;
   margin-left: 74px;
+}
+@media (min-width: 768px) {
+  .nav-bar {
+    display: flex;
+    justify-content: space-between;
+  }
+  .nav-bar img {
+    display: none;
+  }
+  .nav-bar ul {
+    display: flex;
+    list-style: none;
+    margin-right: 140px;
+  }
+  .logo {
+    margin-left: 90px;
+    font-size: 18px;
+  }
+  .main-section {
+    background-image: url(/images/desktop-header.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .main-section h1 {
+    height: auto;
+    width: 900px;
+    font-size: 48px;
+  }
+  .main-section p {
+    width: 800px;
+    height: auto;
+    margin-right: 90px;
+    margin-top: -5px;
+  }
+  .main-section h3 {
+    height: auto;
+    padding: 5px;
+    font-size: 16px;
+    margin-right: 700px;
+  }
+  .nav-links {
+    padding: 8px;
+    margin-right:670px;
+  }
+  .projects {
+    display: grid;
+    grid-template-columns: 70%;
+    margin-top: 80px;
+    
+  }
+  .work {
+    display: flex;
+    flex-direction: row;
+  }
+  .lost {
+    display: none;
+  }
+  .desktop-image {
+    display: inline;
+    width: 500px;
+    padding: 10px;
+    margin-right: 100px;
+  }
+  .reverse {
+    flex-direction: row-reverse;
+  }
+  .desktop {
+    display: inline;
+    width: 500px;
+    padding: 15px;
+    margin-left: 100px;
+  }
+  .about-me {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 30% 40%;
+    justify-content: space-evenly;
+    height: auto;
+  }
+  .form-image {
+    display: none;
+  }
+  .form-section {
+    background-image: url(/images/contact-form-desktop-background.png);
+    background-position: fixed;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    margin-bottom: 30px;
+  }
 }
