--- a/main.css
+++ b/main.css
@@ -624,6 +624,13 @@ label {
     padding: 15px;
     margin-left: 100px;
   }
+  .work-section h2 {
+    font-size: 40px;
+    width: 450px;
+    position: relative;
+    right: 50px;
+    bottom: 15px;
+  }
   .about-me {
     width: 100%;
     display: grid;
