--- a/main.css
+++ b/main.css
@@ -648,4 +648,23 @@ label {
     background-size: 100%;
     margin-bottom: 30px;
   }
+  .form-section input {
+    border-radius: 2px;
+    border: 1px solid #CFD8DC;
+    width: 447px;
+  }
+  .form-section textarea {
+    border-radius: 2px;
+    width:447px;
+  }
+  .form-section button {
+    margin-left: 160px;
+  }
+  .about-me {
+  margin-top: 10vh;
+  }
+  .about-paragraph {
+    width: 447px;
+    font-size: 16px;
+  }
 }
