--- a/main.css
+++ b/main.css
@@ -953,7 +953,7 @@ label {
     position: relative;
     right: 30px;
     top: 30px;
-    background-color: #4053FC;
+    background-color: #4053fc;
     color: #fff;
   }
 
