update styles files

--- a/main.css
+++ b/main.css
@@ -7,21 +7,68 @@
   font-family: 'Poppins', sans-serif;
 }
 
-.wrapper {
-  height: 718px;
+body {
+  height: 100%;
+  width: 100vw;
 }
 
-.nav-bar a {
-  display: flex;
+.desktop-nav {
+  display: none;
+}
+
+header {
+  background-color: #fff;
+}
+
+li {
+  list-style: none;
+}
+
+a {
   text-decoration: none;
+}
+
+.pop-up {
+  display: none;
+  transition: 0.4s;
+}
+
+.pop-up li a {
+  text-decoration: none;
+  font-family: 'poppins', sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  color: #fff;
+}
+
+.active-pop-up {
+  display: block;
+  height: 5200px;
+  width: 100vw;
+  position: absolute;
+  background-color: #6070ff;
+  top: 0;
+  left: 0;
+  padding: 50px 20px;
+  transition: 0.4s;
+}
+
+.pop-up li {
+  list-style: none;
+  padding: 15px;
+  text-decoration: none;
+}
+
+.close-icon {
+  display: none;
+}
+
+.nav-bar {
+  min-height: 70px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
-}
-
-.nav-bar ul {
-  display: none;
-  list-style: none;
+  padding: 0 24px;
 }
 
 .logo {
@@ -47,6 +94,16 @@
   color: #172b4d;
   padding-left: 30px;
   margin-top: 80px;
+}
+
+.close {
+  display: block;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 20px;
+  z-index: 2;
+  color: #fff;
 }
 
 .intro-1 {
@@ -75,8 +132,8 @@
   display: flex;
   flex-direction: column;
   background-image: url(images/header.png);
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -451,7 +508,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 800px;
   background-color: #6070ff;
   border-top-left-radius: 100px;
   width: 100%;
@@ -569,30 +625,15 @@ label {
     background-color: #e5e5e5e5;
   }
 
-  .nav-bar {
+  .desktop-nav {
     display: flex;
     justify-content: space-between;
-    background-color: #fff;
+    align-items: center;
+    gap: 50px;
   }
 
-  .nav-bar img {
+  .loose {
     display: none;
-  }
-
-  .nav-bar ul {
-    display: flex;
-    list-style: none;
-    margin-right: 140px;
-  }
-
-  .logo {
-    margin-left: 90px;
-    font-size: 18px;
-    transition: 2s;
-  }
-
-  .logo:hover {
-    transform: scale(1.2);
   }
 
   .main-section {
