Update the style for the structure
The height the popup window has been updated with 100%

--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ a {
 
 .active-pop-up {
   display: block;
-  height: 5200px;
+  height: 100%;
   width: 100vw;
   position: absolute;
   background-color: #6070ff;
