--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ a {
 
 .active-pop-up {
   display: block;
-  height: 100%;
+  height: 4190px;
   width: 100vw;
   position: absolute;
   background-color: #6070ff;
